--- a/index.html
+++ b/index.html
@@ -60,19 +60,21 @@
     <!-- Page Content -->
     <div class="container">
 
-        <div class="row">
+        <center>
+            <div class="row">
+                <div class="btn-group">
+                    <div class="col-md-6 col-sm-6">
+                        <a href="attractions.html"><button id="btn1" class="btn" style=""><img src="img/KS-L.png">
+                        <br><span>Travel</span></button></a>
+                    </div>
 
-            <div class="col-md-6">
-                <a href="attractions.html"><button id="btn1" class="btn" style="vertical-align:middle"><img src="img/KS-L.png">
-                <br><span>Travel</span></button></a>
+                    <div class="col-md-6 col-sm-6">
+                        <a href="food.html"><button id="btn2" class="btn" style=""><img src="img/KS-R.png">
+                        <br><span>Food</span></button></a>
+                    </div>
+                </div>
             </div>
-
-            <div class="col-md-6">
-                <a href="food.html"><button id="btn2" class="btn" style="vertical-align:middle"><img src="img/KS-R.png">
-                <br><span>Food</span></button></a>
-            </div>
-
-        </div>
+        </center>
 
     </div>
     <!-- /.container -->
