add title icon in all html

--- a/food.html
+++ b/food.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>Kaohsiung - Food Infrmation</title>
+    <link rel="Shortcut Icon" type="image/x-icon" href="img/K-1.png">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
